--- a/bolt-portal/public/index.html
+++ b/bolt-portal/public/index.html
@@ -9,7 +9,7 @@
         content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color"
         content="#000000" />
-  <script src="%PUBLIC_URL%/res.js"></script>
+  <script src="%PUBLIC_URL%/res.js?version=4"></script>
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
